--- a/src/app/call-back/call-back.component.html
+++ b/src/app/call-back/call-back.component.html
@@ -1,12 +1,9 @@
-<div *ngIf="error" class="row justify-content-center">
-  <div class="col-md-8 text-center">
-    <div class="alert alert-warning" role="alert">
-      Oops, there was an error, please try to <a routerLink="/home">login again</a>.
-    </div>
+<main>
+  <div *ngIf="error" class="alert alert-warning" role="alert">
+    <p>Something went wrong! Please try to <a routerLink="/home">login again</a>.</p>
   </div>
-</div>
-<div *ngIf="!error" class="row justify-content-center">
-  <p>
-    todo: Add Spinner Here
-  </p>
-</div>
+
+  <div *ngIf="!error" class="spinner-border" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+</main>
