--- a/src/app/complaints/complaints.component.html
+++ b/src/app/complaints/complaints.component.html
@@ -1,4 +1,4 @@
+<app-header pageName="Complaint Manager"></app-header>
 <main>
-  <app-header pageName="Complaints Page"></app-header>
   <p>complaints works!</p>
 </main>
