--- a/src/app/not-impimented-yet/not-impimented-yet.component.html
+++ b/src/app/not-impimented-yet/not-impimented-yet.component.html
@@ -1,6 +1,6 @@
 <main>
   <div class="alert alert-warning" role="alert">
     <p>This page isn't impimented yet! sorry!</p>
-    <a routerLink="/home">Back to Home</a>
+    <button (click)="goBack()" class="btn btn-link">Go Back</button>
   </div>
 </main>
