--- a/src/app/complaints/complaints.component.html
+++ b/src/app/complaints/complaints.component.html
@@ -1,4 +1,4 @@
 <app-header pageName="Complaint Manager"></app-header>
 <main>
-  <p>complaints works!</p>
+  <app-place *ngFor="let place of places" [place]="place"></app-place>
 </main>
