--- a/src/app/complaints/complaint/complaint.component.html
+++ b/src/app/complaints/complaint/complaint.component.html
@@ -1,17 +1,23 @@
-<div class="card m-2" style="width: 20rem;">
+<div class="card">
   <!-- <div class="card-header">
   </div> -->
   <div class="card-body">
     <h5 class="card-title" [innerHTML]="complaint.userEmail | emailBreak"></h5>
-    <h6 class="card-subtitle mb-2 text-muted">{{complaint.status}}</h6>
-    <p class="card-text">{{complaint.comment}}</p>
-    <button class="btn btn-primary">Update</button>
-    <button class="btn btn-danger ml-1">Delete</button>
+    <form #complaintForm="ngForm" (ngSubmit)="onSubmit()">
+      <select class="form-control" [(ngModel)]="complaint.status" name="Status">
+        <option value="Pending">Pending</option>
+        <option value="Resolved">Resolved</option>
+        <option value="Newly Created">Newly Created</option>
+      </select>
+      <textarea class="form-control mt-2 mb-2" [(ngModel)]="complaint.comment" rows="3" name="Comment"></textarea>
+      <button type="submit" class="btn btn-primary">Update</button>
+      <button type="button" class="btn btn-danger ml-2" (click)="onClick()">Delete</button>
+    </form>
   </div>
   <div class="card-footer text-muted">
-    Submitted: {{complaint.timeSubmitted.toLocaleString()}}
+    Submitted: {{timeAdded.toLocaleString()}}
   </div>
   <div *ngIf="complaint.status != 'Newly Created'" class="card-footer text-muted">
-    Submitted: {{complaint.timeSubmitted.toLocaleString()}}
+    Updated: {{lastUpdated.toLocaleString()}}
   </div>
 </div>
