--- a/src/app/complaints/complaints.component.css
+++ b/src/app/complaints/complaints.component.css
@@ -1,6 +1,6 @@
 main {
-    margin-left: 2%;
-    margin-right: 2%;
+    margin-left: 2vw;
+    margin-right: 2vw;
     margin-top: 2vh;
     margin-bottom: 2vh;
 }
