--- a/src/app/complaints/complaints.component.html
+++ b/src/app/complaints/complaints.component.html
@@ -1,4 +1,8 @@
 <app-header pageName="Complaint Manager"></app-header>
 <main>
+  <!-- Page is Loading -->
+  <div *ngIf="Loading" class="spinner-border" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
   <app-place *ngFor="let place of places" [place]="place"></app-place>
 </main>
