added loading spinner to complaint component

--- a/src/app/complaints/complaint/complaint.component.css
+++ b/src/app/complaints/complaint/complaint.component.css
@@ -15,3 +15,24 @@
 textarea{
     width: 100%;
 }
+
+.spinner-border {
+    margin: auto;
+    height: 2em;
+    width: 2em;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.black-background {
+    background-color: rgba(0, 0, 0, 0.5);
+    margin: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
