--- a/src/app/complaints/complaint/complaint.component.html
+++ b/src/app/complaints/complaint/complaint.component.html
@@ -1,4 +1,10 @@
 <div class="card">
+  <!-- Page is Loading -->
+  <div *ngIf="Loading" class="black-background">
+    <div *ngIf="Loading" class="spinner-border" role="status">
+      <span class="sr-only">Loading...</span>
+    </div>
+  </div>
   <div class="card-body">
     <h5 class="card-title" [innerHTML]="complaint.userEmail | emailBreak"></h5>
     <form #complaintForm="ngForm" (ngSubmit)="onSubmit()">
