--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-
-<router-outlet></router-outlet>
+<main *ngIf="loading">
+  <div class="spinner-border" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+</main>
+<router-outlet *ngIf="!loading"></router-outlet>
