--- a/src/app/complaints/complaint/complaint.component.html
+++ b/src/app/complaints/complaint/complaint.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <!-- Page is Loading -->
   <div *ngIf="Loading" class="black-background">
-    <div *ngIf="Loading" class="spinner-border" role="status">
+    <div class="spinner-border" role="status">
       <span class="sr-only">Loading...</span>
     </div>
   </div>
@@ -11,7 +11,7 @@
       <select class="form-control" [(ngModel)]="complaint.status" name="Status">
         <option value="Pending">Pending</option>
         <option value="Resolved">Resolved</option>
-        <option value="Newly Created">Newly Created</option>
+        <option value="Newly Created" disabled>Newly Created</option>
       </select>
       <textarea class="form-control mt-2 mb-2" [(ngModel)]="complaint.comment" rows="3" name="Comment"></textarea>
       <button type="submit" class="btn btn-primary">Update</button>
