Added Add/Remove Admin Role Functionality

--- a/src/app/complaints/complaint/complaint.component.html
+++ b/src/app/complaints/complaint/complaint.component.html
@@ -21,6 +21,7 @@
   <div class="card-footer text-muted">
     Submitted: {{timeAdded.toLocaleString()}}
   </div>
+  <!-- If complaint is not newly created -->
   <div *ngIf="complaint.status != 'Newly Created'" class="card-footer text-muted">
     Updated: {{lastUpdated.toLocaleString()}}
   </div>
