--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -2,9 +2,12 @@
 <main>
   <form (submit)="onSubmit()" class="form-group" style="max-width: 20em;">
     <label for="email">User Email Address</label>
-    <input type="text" [ngModel]="email" class="form-control" name="email" /> 
+    <input id="email" type="text" [(ngModel)]="email" class="form-control" name="email" /> 
     <br />
     <button type="submit" class="btn btn-primary">Get User Information</button>
   </form>
-  <app-user></app-user>
+  <div *ngIf="error != ''" class="alert alert-warning" role="alert">
+    {{error}}
+  </div>
+  <app-user *ngIf="user != null" [user]="user"></app-user>
 </main>
