Impimented onChange update context

--- a/src/app/complaints/complaint/complaint.component.html
+++ b/src/app/complaints/complaint/complaint.component.html
@@ -8,14 +8,17 @@
   <div class="card-body">
     <h5 class="card-title" [innerHTML]="complaint.userEmail | emailBreak"></h5>
     <form #complaintForm="ngForm" (ngSubmit)="onSubmit()">
-      <select class="form-control" [(ngModel)]="complaint.status" name="Status">
+      <select (change)="onChange()" class="form-control" [(ngModel)]="complaint.status" name="Status">
         <option value="Pending">Pending</option>
         <option value="Resolved">Resolved</option>
         <option value="Newly Created" disabled>Newly Created</option>
       </select>
-      <textarea class="form-control mt-2 mb-2" [(ngModel)]="complaint.comment" rows="3" name="Comment"></textarea>
-      <button type="submit" class="btn btn-primary">Update</button>
-      <button type="button" class="btn btn-danger ml-2" (click)="onClick()">Delete</button>
+      <textarea (ngModelChange)="onChange()" class="form-control mt-2 mb-2" [(ngModel)]="complaint.comment" rows="3" name="Comment"></textarea>
+      <div style="display: flex;">
+        <button *ngIf="edited" type="submit" class="btn btn-primary">Update</button>
+        <span style="flex-grow: 1;"></span>
+        <button type="button" class="btn btn-danger ml-2" (click)="onClick()">Delete</button>
+      </div>
     </form>
   </div>
   <div class="card-footer text-muted">
