--- a/src/app/complaints/complaint/complaint.component.html
+++ b/src/app/complaints/complaint/complaint.component.html
@@ -17,7 +17,7 @@
       <div style="display: flex;">
         <button *ngIf="edited" type="submit" class="btn btn-primary">Update</button>
         <span style="flex-grow: 1;"></span>
-        <button type="button" class="btn btn-danger ml-2" (click)="onClick()">Delete</button>
+        <button type="button" class="btn btn-danger" (click)="onClick()">Delete</button>
       </div>
     </form>
   </div>
