--- a/src/app/complaints/complaints.component.html
+++ b/src/app/complaints/complaints.component.html
@@ -4,7 +4,7 @@
   <h4 *ngIf="1 > places.length">It looks like there are no unresolved complaints at the moment!</h4>
 
   <div class="d-flex justify-content-center">
-    <button *ngIf="!loading" class="btn btn-primary" (click)="onClick()">{{getButtonText()}} Resolved Complaints</button>
+    <button *ngIf="!loading" class="btn btn-outline-primary" (click)="onClick()">{{getButtonText()}} Resolved Complaints</button>
     <div *ngIf="loading" class="spinner-border" role="status">
       <span class="sr-only">Loading...</span>
     </div>
