--- a/src/app/users/user/user.component.html
+++ b/src/app/users/user/user.component.html
@@ -1,6 +1,6 @@
-<h1>{{user.email}}</h1>
-<button *ngIf="user.roles[0] != 'Administrator' && !loading" class="btn btn-primary" (click)="onPromote()">Promote to Administrator</button>
-<button *ngIf="user.roles[0] == 'Administrator' && !loading" class="btn btn-danger" (click)="onDemote()">Demote Administrator</button>
+<h2>{{user.email}}</h2>
+<button *ngIf="user.roles[0] != 'Administrator' && !loading" class="btn btn-outline-primary" (click)="onPromote()">Promote to Administrator</button>
+<button *ngIf="user.roles[0] == 'Administrator' && !loading" class="btn btn-outline-danger" (click)="onDemote()">Demote Administrator</button>
 <div *ngIf="loading" class="spinner-border" role="status">
   <span class="sr-only">Loading...</span>
 </div>
