Updated formatting & colours to be more accessable

--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -3,5 +3,5 @@
   <a routerLink="/complaints" class="nav-link" [ngClass]="{'active': pageName === 'Complaint Manager'}">Manage Complaints</a>
   <!-- <a routerLink="/reviews" class="nav-link" [ngClass]="{'active': pageName === 'Review Manager'}">Manage Reviews</a> -->
   <span style="flex-grow: 1;"></span>
-  <button (click)="Logout()" style="" type="button" class="btn btn-outline-secondary">Logout</button>
+  <button (click)="Logout()" type="button" class="btn btn-secondary">Logout</button>
 </nav>
