--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -4,7 +4,7 @@
     <label for="email">User Email Address</label>
     <input id="email" type="text" [(ngModel)]="email" class="form-control" name="email" /> 
     <br />
-    <button *ngIf="!loading" type="submit" class="btn btn-outline-primary">Get User Information</button>
+    <button *ngIf="!loading" type="submit" class="btn btn-primary">Get User Information</button>
     <div *ngIf="loading" class="spinner-border" role="status">
       <span class="sr-only">Loading...</span>
     </div>
