Added screen reader attributes

--- a/src/app/complaints/complaint/complaint.component.html
+++ b/src/app/complaints/complaint/complaint.component.html
@@ -8,8 +8,8 @@
   <div class="card-body">
     <h5 class="card-title" [innerHTML]="complaint.userEmail | emailBreak"></h5>
     <form #complaintForm="ngForm" (ngSubmit)="onSubmit()" style="display: flex; flex-flow: wrap;">
-      <label for="status" class="mt-1">Status: </label>
-      <select (change)="onChange()" class="form-control ml-3" style="width: auto;" [(ngModel)]="complaint.status" name="Status" id="status">
+      <label for="status.{{complaint.placeID}}.{{complaint.userID}}" class="mt-1">Status: </label>
+      <select (change)="onChange()" class="form-control ml-3" style="width: auto;" [(ngModel)]="complaint.status" name="Status" id="status.{{complaint.placeID}}.{{complaint.userID}}">
         <option value="Pending">Pending</option>
         <option value="Resolved">Resolved</option>
         <option value="Newly Created" disabled>Newly Created</option>
@@ -17,10 +17,10 @@
       
       <span style="flex-grow: 1; flex-basis: 100%;"></span>
 
-      <label for="comment" class="mt-2">Details: </label>
-      <textarea (ngModelChange)="onChange()" class="form-control mb-3" [(ngModel)]="complaint.comment" rows="3" name="Comment" id="comment"></textarea>
+      <label for="comment.{{complaint.placeID}}.{{complaint.userID}}" class="mt-2">Details: </label>
+      <textarea (ngModelChange)="onChange()" class="form-control mb-3" [(ngModel)]="complaint.comment" rows="3" name="Comment" id="comment.{{complaint.placeID}}.{{complaint.userID}}"></textarea>
       <!-- <div style="display: flex;"> -->
-        <button [disabled]="!edited" type="submit" class="btn btn-primary">Update</button>
+        <button [disabled]="!edited" [attr.aria-disabled]="!edited" type="submit" class="btn btn-primary">Update</button>
         <span style="flex-grow: 1;"></span>
         <button type="button" class="btn btn-danger" (click)="onClick()">Delete</button>
       <!-- </div> -->
