--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,6 +1,6 @@
 <main>
   <div class="alert alert-warning" role="alert">
-    <p>Page not found!</p>
+    <p #focusElement>Page not found!</p>
     <a routerLink="/home" class="btn btn-link">Back to Home</a>
   </div>
 </main>
