--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
 <header>
-  <h1 #focusElement>{{pageName}}</h1>
+  <h1 id="focusElement">{{pageName}}</h1>
   <navigation [pageName]="pageName"></navigation>
 </header>
