--- a/src/app/not-impimented-yet/not-impimented-yet.component.html
+++ b/src/app/not-impimented-yet/not-impimented-yet.component.html
@@ -1,6 +1,6 @@
 <main>
   <div class="alert alert-warning" role="alert">
-    <p #focusElement>This page isn't impimented yet! sorry!</p>
+    <p id="focusElement">This page isn't impimented yet! sorry!</p>
     <button (click)="goBack()" class="btn btn-link">Go Back</button>
   </div>
 </main>
